Styles fixed to fit screen width on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@ audio {
   }
 
   #MiddleButton {
-    width: calc(100vw - 64px - 64px);
+    width: calc(100vw - 64px - 64px - (100vw - 100%));
   }
 }
 
